--- a/resources/assets/GEPS-WEB-SER-ME03.html
+++ b/resources/assets/GEPS-WEB-SER-ME03.html
@@ -151,7 +151,7 @@
                                 <button type="button" class="btn btn-md btn-primary btn-w76">재발송</button>
                             </div>
                         </div>
-                        <table class="basic-table col-table type2 mt16" id="">
+                        <table class="basic-table col-table type2 mt16 v-table" id="">
                             <colgroup>
                                 <col style="width: 12.5%;">
                                 <col style="width: 12.5%;">
@@ -162,15 +162,13 @@
                                 <col style="width: 12.5%;">
                                 <col style="width: 12.5%;">
                             </colgroup>
-                            <thead>
+                            <tbody>
                                 <tr>
                                     <th>제목</th>
                                     <th colspan="3" class="bg-white tl">2023 여름 신상조사 참여 이벤트<span class="push">PUSH</span></th>
                                     <th>발신번호</th>
                                     <th colspan="3" class="bg-white tl">-</th>
                                 </tr>
-                            </thead>
-                            <tbody>
                                 <tr>
                                     <td class="bg-navy">총 전송</td>
                                     <td colspan="3" class="tl">583건</td>
