--- a/resources/assets/GEPS-WEB-SER-ME03.html
+++ b/resources/assets/GEPS-WEB-SER-ME03.html
@@ -165,30 +165,30 @@
                             <tbody>
                                 <tr>
                                     <th>제목</th>
-                                    <th colspan="3" class="bg-white tl">2023 여름 신상조사 참여 이벤트<span class="push">PUSH</span></th>
+                                    <td colspan="3" class="bg-white tl">2023 여름 신상조사 참여 이벤트<span class="push">PUSH</span></td>
                                     <th>발신번호</th>
-                                    <th colspan="3" class="bg-white tl">-</th>
+                                    <td colspan="3" class="bg-white tl">-</td>
                                 </tr>
                                 <tr>
-                                    <td class="bg-navy">총 전송</td>
+                                    <th>총 전송</th>
                                     <td colspan="3" class="tl">583건</td>
-                                    <td class="bg-navy">관리자명</td>
+                                    <th>관리자명</th>
                                     <td class="tl">연금공단관리자님</td>
-                                    <td class="bg-navy">전송시간</td>
+                                    <th>전송시간</th>
                                     <td class="tl">2023-06-28 11:30</td>
                                 </tr>
                                 <tr>
-                                    <td class="bg-navy">전송 수</td>
+                                    <th>전송 수</th>
                                     <td class="tl">583건</td>
-                                    <td class="bg-navy">전송성공</td>
+                                    <th>전송성공</th>
                                     <td class="tl">524건</td>
-                                    <td class="bg-navy">전송실패</td>
+                                    <th>전송실패</th>
                                     <td class="tl">12건</td>
-                                    <td class="bg-navy">전송불가</td>
+                                    <th>전송불가</th>
                                     <td class="tl">47건</td>
                                 </tr>
                                 <tr>
-                                    <td class="bg-navy">본문내용</td>
+                                    <th>본문내용</th>
                                     <td colspan="7" class="main-text">
                                         <div class="tl">
                                             2023년 여름 신상조사를 7월 31일까지 완료하시면 추첨을 통해 커피 기프티콘을 보내 드립니다.
