--- a/resources/assets/GEPS-WEB-SER-ME04.html
+++ b/resources/assets/GEPS-WEB-SER-ME04.html
@@ -402,7 +402,7 @@
     </div>
 
     <!-- S:MD -->
-    <div id="mdModal" class="modal-wrap modal-md">
+    <div id="mdModal" class="modal-wrap modal-md namecheck-modal">
         <div class="modal-content">
             <div class="modal-header">
                 <h3 class="modal-title">발신대상 확인</h3>
