--- a/resources/assets/GEPS-WEB-SER-NO02.html
+++ b/resources/assets/GEPS-WEB-SER-NO02.html
@@ -137,14 +137,14 @@
                 <div class="pt64">
                     <form action="" class="write-wrap bbt-gray">
                         <div class="input-group">
-                            <label for="">공지사항 제목</label>
+                            <label for="text01">공지사항 제목</label>
                             <input type="text" id="text01" placeholder="텍스트를 입력하세요">
                         </div>
                         <div class="dropdown-group">
                             <h2>카테고리</h2>
                             <div class="dropdown-list-wrap">
                                 <button class="dropdown-button" data-target="drop01">공통</button>
-                                <ul id="drop01" class="dropdown-list"  style="display: none;">
+                                <ul id="drop01" class="dropdown-list">
                                     <li><a href="#">1</a></li>
                                     <li><a href="#">2</a></li>
                                     <li><a href="#">3</a></li>
@@ -152,9 +152,9 @@
                             </div>
                         </div>
                         <div class="input-group">
-                            <label for="">공지사항 내용</label>
+                            <label for="textarea01">공지사항 내용</label>
                             <!-- form edit filed -->
-                            <textarea name="" id="" style="height: 559px; flex:1; border: solid 1px #DDDDDD; border-radius: 4px; resize: none; padding: 16px;" placeholder="공지사항을 입력하세요."></textarea>
+                            <textarea name="textarea01" id="textarea01" style="height: 559px; flex:1; border: solid 1px #DDDDDD; border-radius: 4px; resize: none; padding: 16px;" placeholder="공지사항을 입력하세요."></textarea>
                         </div>
                         <div class="file-group">
                             <h2 class="mr40">파일첨부</h2>
